# counter_on_elrond

./: Cargo.toml  README.md
counter/: Cargo.toml  erdpy.json
counter/interaction/: snippets.sh
counter/meta/: Cargo.toml
counter/meta/src/: main.rs
counter/src/: counter.rs
counter/wasm/: Cargo.toml
counter/wasm/src/: lib.rs
