[package]
name = "counter-wasm"
version = "0.0.1"
authors = [ "Bicarus <hello@bicarus.io>",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.counter]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.34.0"

[dependencies.elrond-wasm-output]
version = "0.34.0"
features = ["wasm-output-mode"]
